# R-File-manager-CLI-BASED-

./: .gitignore  README.md  file_ops.py
r_shell/: file_ops.py  pyproject.toml
r_shell/r_shell.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
